fix: fixed bugged menu on firefox and some small changes

--- a/assets/styles/elements/Header/_HeaderNavigationSubItemsColors.scss
+++ b/assets/styles/elements/Header/_HeaderNavigationSubItemsColors.scss
@@ -55,21 +55,7 @@
 				&.label-performance, {
 
 					li[class]::after {
-						background-color: $desaturated-red-menu;
-					}
-				}
-
-				&.label-ai, {
-
-					li[class]::after {
 						background-color: $desaturated-magenta-menu;
-					}
-				}
-
-				&.label-images, {
-
-					li[class]::after {
-						background-color: $desaturated-green-menu;
 					}
 				}
 
